--- a/components/authentication/azure/gradle/dependencies.gradle
+++ b/components/authentication/azure/gradle/dependencies.gradle
@@ -11,5 +11,5 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     api 'com.azure:azure-core:1.28.0'
 
-    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.1'
+    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.1-SNAPSHOT'
 }
