--- a/components/serialization/json/gradle/dependencies.gradle
+++ b/components/serialization/json/gradle/dependencies.gradle
@@ -9,5 +9,5 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     api 'com.google.code.gson:gson:2.9.0'
 
-    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.1'
+    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.1-SNAPSHOT'
 }
