--- a/components/serialization/text/gradle/dependencies.gradle
+++ b/components/serialization/text/gradle/dependencies.gradle
@@ -6,6 +6,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:31.1-jre'
-    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.1'
+    implementation 'com.google.guava:guava:31.1-jre' 
+    
+    implementation 'com.microsoft.kiota:microsoft-kiota-abstractions:0.0.1-SNAPSHOT'
 }
