--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -14,18 +14,28 @@ on:
       abstractions:
         description: release abstractions
         type: boolean
+        default: false
+        required: false
       authentication-azure:
         description: release azure-auth
         type: boolean
+        default: false
+        required: false
       http-okHttp:
         description: release http-okHttp
         type: boolean
+        default: false
+        required: false
       serialization-json: 
         description: release serialization-json
         type: boolean 
+        default: false
+        required: false
       serialization-text: 
         description: release serialization-text
         type: boolean
+        default: false
+        required: false
   
 env: 
   PREVIEW_TASK: publishSnapshotPublicationToSonatypeSnapshotRepository
@@ -41,6 +51,7 @@ jobs:
       serialization-text: ${{ steps.filter.serialization-text }}
     steps:
     - name: checkPaths
+      if: ${{ github.event.inputs.abstractions == 'false' && github.event.inputs.authentication-azure == 'false' && github.event.inputs.serialization-json == 'false' && github.event.inputs.serialization-text == 'false' && github.event.inputs.http-okHttp == 'false' }}
       uses: dorny/paths-filter@v2.10.2
       id: filter
       with:
