- adds missing checkout step
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.github/workflows/buildRelease-trigger.yml
+++ b/.github/workflows/buildRelease-trigger.yml
@@ -50,6 +50,7 @@ jobs:
       serialization-json: ${{ steps.filter.serialization-json }}
       serialization-text: ${{ steps.filter.serialization-text }}
     steps:
+    - uses: actions/checkout@v3
     - name: checkPaths
       if: ${{ github.event.inputs.abstractions == 'false' && github.event.inputs.authentication-azure == 'false' && github.event.inputs.serialization-json == 'false' && github.event.inputs.serialization-text == 'false' && github.event.inputs.http-okHttp == 'false' }}
       uses: dorny/paths-filter@v2.10.2
