--- a/components/http/okHttp/android/gradle.properties
+++ b/components/http/okHttp/android/gradle.properties
@@ -23,11 +23,11 @@ org.gradle.jvmargs=-Xmx2g
 org.gradle.parallel=true
 org.gradle.caching=true
 
-mavenGroupId         = com.microsoft.graph
-mavenArtifactId      = microsoft-graph-core
-mavenMajorVersion    = 3
-mavenMinorVersion    = 0
-mavenPatchVersion    = 0
+mavenGroupId         = com.microsoft.kiota
+mavenArtifactId      = microsoft-kiota-http-okHttp
+mavenMajorVersion = 0
+mavenMinorVersion = 0
+mavenPatchVersion = 6
 mavenArtifactSuffix = 
 
 #These values are used to run functional tests
