--- a/components/http/okHttp/android/settings.gradle
+++ b/components/http/okHttp/android/settings.gradle
@@ -7,4 +7,4 @@
  * in the user manual at https://docs.gradle.org/6.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'msgraph-sdk-java-core'
+rootProject.name = 'com-microsoft-kiota-http-okHttp'
