--- a/.github/workflows/api-level-lint.yml
+++ b/.github/workflows/api-level-lint.yml
@@ -129,3 +129,27 @@ jobs:
         with:
           name: lint-report
           path: ./components/serialization/text/android/build/reports
+
+  lint-api-level-form:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: 18
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2.0.10
+      - name: Add execution right to the script
+        run: chmod +x gradlew
+        working-directory: ./components/serialization/form/android
+      - name: Build SDK with Android project configuration
+        id: lint
+        run: ./gradlew --no-daemon build
+        working-directory: ./components/serialization/form/android
+      - name: Upload linting results
+        if: failure() && steps.lint.outcome == 'failure'
+        uses: actions/upload-artifact@v3
+        with:
+          name: lint-report
+          path: ./components/serialization/form/android/build/reports
