Re-structure using gradle multi-project

--- a/.github/workflows/gradleBuild-component.yml
+++ b/.github/workflows/gradleBuild-component.yml
@@ -13,31 +13,27 @@ on:
 jobs:
   build_component:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ inputs.workingDirectory }} 
     steps:
       - uses: actions/checkout@v3
       - name: Setup JDK
         uses: actions/setup-java@v3
         with: 
-          java-version: '18'
+          java-version: 17
           distribution: 'adopt'
           cache: gradle
       - name: Detect Secrets
         uses: RobertFischer/detect-secrets-action@v2.0.0
-      - name: Grant Execute Permission for Gradlew
-        run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -p ${{ inputs.workingDirectory }} 
       - name: Upload Unit Test Results
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
         with:
           name: Unit Tests
           path: |
-              build/reports/tests/test/**
-              build-test-results/**
+              components/**/build/reports/tests/test/**
+              components/**build-test-results/**
+      # TODO: not sure what to do with the next step
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3
         with:
