--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,3 +43,11 @@ jobs:
     - name: Publish Release
       if: contains(github.ref, 'refs/tags/v')
       run: ./gradlew --no-daemon $PUBLISH_TASK
+    - name: Release
+      uses: anton-yurchenko/git-release@v5.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DRAFT_RELEASE: "false"
+        PRE_RELEASE: "false"
+        CHANGELOG_FILE: "CHANGELOG.md"
+        ALLOW_EMPTY_CHANGELOG: "true"
