- fixes the working directory for the copy script
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,13 +30,15 @@ jobs:
       shell: pwsh
       env:  
         ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
-        OUTPUT_PATH: '.\local.properties' 
+        OUTPUT_PATH: '.\local.properties'
+      working-directory: ./
     - name: Download file
       run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
       shell: pwsh
       env: 
         ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
         OUTPUT_PATH: '.\secring.gpg'
+      working-directory: ./
     - name: Build with Gradle
       run: ./gradlew --no-daemon build
     - name: Publish Preview
@@ -61,12 +63,14 @@ jobs:
       env:  
         ENCODED_VALUE: ${{ secrets.LOCAL_PROPERTIES }}
         OUTPUT_PATH: '.\local.properties' 
+      working-directory: ./
     - name: Download file
       run: .\scripts\decodeAndWrite.ps1 -encodedValue $env:ENCODED_VALUE -outputPath $env:OUTPUT_PATH
       shell: pwsh
       env: 
         ENCODED_VALUE: ${{ secrets.SECRING_GPG }}
         OUTPUT_PATH: '.\secring.gpg'
+      working-directory: ./
     - name: Build with Gradle
       run: ./gradlew --no-daemon build
     - name: Publish Release
