Revert "- removes file check to verify it can actually find the file"
This reverts commit 38f896e2fe157ea6b5ca0790973c8cc194ecf6f0.

--- a/components/abstractions/build.gradle
+++ b/components/abstractions/build.gradle
@@ -158,10 +158,12 @@ publishing {
             name = 'sonatypeSnapshot'
             
             credentials {
-                Properties properties = new Properties()
-                properties.load(project.rootProject.file('local.properties').newDataInputStream())
-                username = properties.getProperty('sonatypeUsername')
-                password = properties.getProperty('sonatypePassword')
+    			if (project.rootProject.file('local.properties').exists()) {
+        			Properties properties = new Properties()
+        			properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        			username = properties.getProperty('sonatypeUsername')
+        			password = properties.getProperty('sonatypePassword')
+    			}
             }
         }
         
