--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ Username="USERNAME"
 Password="PASSWORD"
 
 #enable mavenCentralPublishingEnabled to publish to maven central
-mavenCentralSnapshotArtifactSuffix = -SNAPSHOT
+mavenCentralSnapshotArtifactSuffix =
 mavenCentralPublishingEnabled=false
 
 android=false
